@@ -1,5 +1,8 @@
 Gaim: The Pimpin' Penguin IM Client that's good for the soul!
 version 0.83:
+	New Features:
+	* Drag-and-drop buddy support for the Invite dialog (Stu Tomlinson)
+
 	Bug Fixes:
 	* Compile with gtk 2.5.x (Gary Kramlich)
 
